@@ -40,8 +40,7 @@
 {if !$App->user->isAllowedChainAction($map, 'move') || !$App->user->isAllowedChainAction($map, 'add') || !$App->user->isAllowedChainAction($map, 'delete')}
 			<span style="cursor: pointer;" onclick="showPopup(Mustache.to_html($('#restrictionsTPL').html()),500,200);">
 				<img src="/images/default/alert.png" style="cursor:pointer;" align="left" />
-					You have restricted controls on this map.
-				</span>
+				You have restricted controls on this map.
 			</span>
 {/if}
 		</div>
@@ -301,14 +300,14 @@
 				{if $system->getAnomalies($map->id)|@count>0}
 					{foreach from=$system->getAnomalies($map->id) key=s item=anom}
 						<div>
-							{$anom.sig} - {$anom.name} &nbsp;
-							<img src="/images/default/cross.small.png" onclick="removeAnomaly('{$anom.id}')"/>
+							{$anom->signatureID} - {$anom->description} &nbsp;
+							<img src="/images/default/cross.small.png" onclick="removeAnomaly('{$anom->id}')"/>
 						</div>
 					{/foreach}
 				{/if}
 					</div>
 					<div style="text-align: right;">
-						<a href="#" onclick="copypasteAnoms(); return false;">Add Anomalies</a>
+						<a href="#" onclick="copypasteAnomalies(); return false;">Add Anomalies</a>
 						|
 						<a href="/map/anomalies/clear/{$map->name}/{$system->name}">Clear Anomalies</a>
 					</div>
